# OpcServant

./: .gitignore  README.md
OpcServant/: CMakeLists.txt  Common.cmake  Common.pri  NodeFlow.cmake  rpi.cmake  setupDirs
OpcServant/Common/: AngularMeter.h  BmpSwitcher.cpp  BmpSwitcher.h  CMakeLists.txt  Common.pro  LCDClock.cpp  LCDWindow.cpp  LinearMeter.cpp  PanelList.cpp  PanelList.h  SliderEntry.cpp  SliderEntry.h  TextChoice.cpp  TextChoice.h  TextEntry.cpp  TextEntry.h  TextSpin.cpp  TextSpin.h  TimeAlarm.h  ToggleOption.cpp  ToggleOption.h  VKeyboardPanel.cpp  VKeyboardPanel.h  VTextEntryDialog.cpp  VTextEntryDialog.h  VirtualKeypad.cpp  VirtualKeypad.h  VirtualKeypadUI.cpp  VirtualKeypadUI.h  VirtualKeypadUI.wxcp  VirtualKeypadUI_common_bitmaps.cpp  VirtualKeypadUI_common_bitmaps.xrc  VkTextControl.cpp  VkTextControl.h  bobject.cpp  bobject.h  common.cpp  common.h  common_global.h  database.cpp  (+54 more)
OpcServant/Common/Daq/: commsthread.cpp  commsthread.h  daq.cpp  daq.h  daqcommon.cpp  daqcommon.h  daqthread.cpp  daqthread.h  localdb.cpp  localdb.h  min.c  min.h  minp2pserial.cpp  minp2pserial.h  modbusServer.cpp  modbusServer.h  rtobject.cpp  rtobject.h  rtobjectscritped.cpp  rtobjectscritped.h  selene.h  serial.cpp  serial.hpp  serialinterface.cpp  serialinterface.h  serialpacket.cpp  serialpacket.h  tcpserver.cpp  tcpserver.h
OpcServant/Common/Gui/: AddAliasDialog.cpp  AddAliasDialog.h  AddObjectDialog.cpp  AddObjectDialog.h  AliasConfigurationDialog.cpp  AliasConfigurationDialog.h  BUI.wxcp  BourbonCommonUI.cpp  BourbonCommonUI.h  BourbonCommonUI.wxcp  BourbonCommonUI_bourboncommon_bitmaps.cpp  BourbonCommonUI_bourboncommon_bitmaps.xrc  CommonGUI.cpp  CommonGUI.h  CommonGUI_bitmaps.cpp  ConfigurationPropertySheet.cpp  ConfigurationPropertySheet.h  ConfigureI2cDialog.cpp  ConfigureI2cDialog.h  DatabaseConfigurePanel.cpp  DatabaseConfigurePanel.h  EditObjectDialog.cpp  EditObjectDialog.h  GridPanel.cpp  GridPanel.h  I2cConfigurePanel.cpp  I2cConfigurePanel.h  InputViewUI.cpp  InputViewUI.h  InputViewUI.wxcp  InputViewUI_bitmaps.cpp  InputViewer.cpp  InputViewer.h  InputViewerHistory.cpp  InputViewerHistory.h  MimicDisplayUI.cpp  NetworkConfigurePanel.cpp  NetworkConfigurePanel.h  PinEntryDialog.cpp  PinEntryDialog.h  (+22 more)
OpcServant/Common/MQTT/: mqttconnection.cpp  mqttconnection.h
OpcServant/Common/Opc/: opccommon.cpp  opccommon.h  opcnodeids.h  opcserver.cpp  opcserver.h  opcthread.h  readonlycontext.cpp  readonlycontext.h  readwritecontext.cpp  readwritecontext.h
OpcServant/Common/Web/: configurationwebdialog.cpp  configurationwebdialog.h  configurei2cwebdialog.cpp  reportselectweb.cpp  (+21 more)
OpcServant/Controls/: AngularMeter.cpp  AngularMeter.h  AngularRegulator.cpp  AngularRegulator.h  BmpCheckBox.cpp  BmpCheckBox.h  BmpSwitcher.cpp  ControlsUI.cpp  ControlsUI.h  ControlsUI.wxcp  ControlsUI_controls_bitmaps.cpp  ControlsUI_controls_bitmaps.xrc  DoubleEntry.cpp  DoubleEntry.h  LCDClock.cpp  LCDClock.h  LCDWindow.cpp  LinearMeter.cpp  LinearMeter.h  LinearRegulator.cpp  LinearRegulator.h  TimeAlarm.cpp  TouchSpin.cpp  TouchSpin.h  VKeyboard.cpp  VKeyboard.h  controls.cpp  controls.h  controls_global.h  roundedbutton.cpp  sliderswitch.cpp  togglebutton.cpp  togglebutton.h
OpcServant/Docs/: pisetup.lst
OpcServant/Harness/: CMakeLists.txt  HarnessTestDialog.cpp  HarnessTestDialog.h  HarnessUI.cpp  HarnessUI.h  HarnessUI.wxcp  HarnessUI_harness_bitmaps.cpp  buiapp.cpp  main.cpp  serial.cpp  serial.hpp
OpcServant/Mimic/: CMakeLists.txt
OpcServant/Modules/: CMakeLists.txt  Modules.pro
OpcServant/MrlLib/: CMakeLists.txt  MrlLib.pro  StatesIcons.cpp  StatesIcons.h  StatesIcons.wxcp  StatesIcons_bitmaps.cpp  StatesIcons_bitmaps.xrc  anypropertytree.cpp  anypropertytree.h  costate.h  i2cinterface.cpp  i2cinterface.h  luascript.cpp  luascript.h  modbusClass.cpp  modbusClass.h  modbusServer.cpp  modbusServer.h  mrllib.cpp  mrllib.h  mrllib_global.h  mrlmutex.h  mrlsignals.h  pigpio.cpp  pigpio.h  propertytree.h  rollingbuffer.hpp  scaleoffset.cpp  scaleoffset.h  scrypt.cpp  scrypt.h  selene.h  sha2.c  sqlitedb.cpp  sqlitedb.h  states.cpp  states.h  stats.cpp  stats.hpp  stopwatch.h  (+10 more)
OpcServant/NodeFlow/: CMakeLists.txt
OpcServant/OsClient/: OpcClientMainFrame.cpp  OpcClientMainFrame.h  OsClient.pro  OsClientUI.cpp  OsClientUI.h  OsClientUI.wxcp  OsClientUI_osclient_bitmaps.cpp  OsClientUI_osclient_bitmaps.xrc  m_datasourcemodel.cpp  m_datasourcemodel.h  main.cpp  osclientapp.cpp  osclientapp.h
OpcServant/Servant/: CMakeLists.txt  Servant.pro  buiapp.cpp  buiapp.h  main.cpp  serverobject.cpp  serverobject.h
OpcServant/ShapeCanvas/: ArrowBase.cpp  ArrowBase.h  AutoLayout.cpp  AutoLayout.h  BitmapShape.cpp  BitmapShape.h  BitmapShapeXml.cpp  CMakeLists.txt  CanvasHistory.cpp  CanvasHistory.h  CanvasState.cpp  CanvasState.h  CircleArrow.cpp  CircleArrow.h  CircleShape.cpp  CircleShape.h  CommonFcn.cpp  CommonFcn.h  ControlShape.cpp  ControlShape.h  CurveShape.cpp  CurveShape.h  Defs.h  DiagramManager.cpp  DiagramManager.h  DiamondArrow.cpp  DiamondArrow.h  DiamondShape.cpp  DiamondShape.h  EditTextShape.cpp  EditTextShape.h  EllipseShape.cpp  EllipseShape.h  FixedRectShape.cpp  FixedRectShape.h  FlexGridShape.cpp  FlexGridShape.h  GridShape.cpp  GridShape.h  LineShape.cpp  (+44 more)
OpcServant/VisualCalc/: CMakeLists.txt
OpcServant/WebScada/: WebScada.pro  datasource.cpp  datasource.h  main.cpp  modbusdatasource.cpp  modbusdatasource.h  mqttdatasource.cpp  mqttdatasource.h  opcdatasource.cpp  opcdatasource.h  webscadaapp.cpp  webscadaapp.h  webscadaapplication.cpp  webscadaapplication.h  webscadamain.cpp  webscadamain.h  webscadastatus.cpp  webscadastatus.h  webscadastatustable.cpp  webscadastatustable.h  wscadamapwindow.cpp  wscadamapwindow.h
OpcServant/charts/: CMakeLists.txt
OpcServant/pibuild/: CMakeCache.txt  Makefile  cmake_install.cmake
OpcServant/reportdocument/: CMakeLists.txt  filehandlers.cpp  pageitems.cpp  pagelayout.cpp  printout.cpp  reportdocument.cpp  shapeitems.cpp  styles.cpp  tableelements.cpp  textelements.cpp
OpcServant/wxSF/: Makefile  config.status
(+1760 files in other folders)
