cmake_minimum_required(VERSION 3.10)
project(Charts)

set(CMAKE_CXX_STANDARD 17)

set(LIB_SOURCES
    wxareachart.cpp
    wxareachartctrl.cpp
    wxareachartdatasetoptions.cpp
    wxareachartoptions.cpp
    wxbarchart.cpp
    wxbarchartctrl.cpp
    wxbarchartdatasetoptions.cpp
    wxbarchartoptions.cpp
    wxboxplot.cpp
    wxboxplotctrl.cpp
    wxboxplotdatasetoptions.cpp
    wxboxplotoptions.cpp
    wxbubblechart.cpp
    wxbubblechartctrl.cpp
    wxbubblechartoptions.cpp
    wxcandlestickchart.cpp
    wxcandlestickchartctrl.cpp
    wxcandlestickchartoptions.cpp
    wxchart.cpp
    wxchartbackground.cpp
    wxchartbackgroundoptions.cpp
    wxchartcommonoptions.cpp
    wxchartctrl.cpp
    wxchartfontoptions.cpp
    wxchartmultitooltip.cpp
    wxchartmultitooltipoptions.cpp
    wxchartoptions.cpp
    wxchartpadding.cpp
    wxchartsarc.cpp
    wxchartsarcoptions.cpp
    wxchartsaxis.cpp
    wxchartsaxisoptions.cpp
    wxchartsbrushoptions.cpp
    wxchartscategoricalaxis.cpp
    wxchartscategoricaldata.cpp
    wxchartscategoricaldataobserver.cpp
    wxchartscircle.cpp
    wxchartscircleoptions.cpp
    wxchartsdataset.cpp
    wxchartsdatasetid.cpp
    wxchartsdatasettheme.cpp
    wxchartsdoubledataset.cpp
    wxchartselement.cpp
    wxchartsgrid.cpp
    wxchartsgridmapping.cpp
    wxchartsgridoptions.cpp
    wxchartslabel.cpp
    wxchartslabelgroup.cpp
    wxchartslabeloptions.cpp
    wxchartslegendctrl.cpp
    wxchartslegenditem.cpp
    wxchartslegendline.cpp
    wxchartslegendlineoptions.cpp
    wxchartslegendoptions.cpp
    wxchartslicedata.cpp
    wxchartsnumericalaxis.cpp
    wxchartsohlcdata.cpp
    wxchartspenoptions.cpp
    wxchartspoint.cpp
    wxchartspointoptions.cpp
    wxchartsprecisiontheme.cpp
    wxchartspresentationtheme.cpp
    wxchartsradialgrid.cpp
    wxchartsradialgridoptions.cpp
    wxchartsrectangle.cpp
    wxchartsrectangleoptions.cpp
    wxchartstheme.cpp
    wxchartsthemefactory.cpp
    wxchartsthemeid.cpp
    wxchartstimeaxis.cpp
    wxchartsutilities.cpp
    wxcharttooltip.cpp
    wxcharttooltipoptions.cpp
    wxcharttooltipprovider.cpp
    wxcolumnchart.cpp
    wxcolumnchartctrl.cpp
    wxcolumnchartdatasetoptions.cpp
    wxcolumnchartoptions.cpp
    wxcombinationchart.cpp
    wxcombinationchartctrl.cpp
    wxcombinationchartoptions.cpp
    wxdoughnutandpiechartbase.cpp
    wxdoughnutandpiechartoptionsbase.cpp
    wxdoughnutchart.cpp
    wxdoughnutchartctrl.cpp
    wxdoughnutchartoptions.cpp
    wxhistogram.cpp
    wxhistogramctrl.cpp
    wxhistogramoptions.cpp
    wxlinechart.cpp
    wxlinechartctrl.cpp
    wxlinechartdatasetoptions.cpp
    wxlinechartoptions.cpp
    wxmath2dplot.cpp
    wxmath2dplotctrl.cpp
    wxmath2dplotoptions.cpp
    wxohlcchart.cpp
    wxohlcchartctrl.cpp
    wxohlcchartoptions.cpp
    wxpiechart.cpp
    wxpiechartctrl.cpp
    wxpiechartoptions.cpp
    wxpolarareachart.cpp
    wxpolarareachartctrl.cpp
    wxpolarareachartoptions.cpp
    wxradarchart.cpp
    wxradarchartctrl.cpp
    wxradarchartoptions.cpp
    wxscatterplot.cpp
    wxscatterplotctrl.cpp
    wxscatterplotoptions.cpp
    wxstackedbarchart.cpp
    wxstackedbarchartctrl.cpp
    wxstackedbarchartdatasetoptions.cpp
    wxstackedbarchartoptions.cpp
    wxstackedcolumnchart.cpp
    wxstackedcolumnchartctrl.cpp
    wxstackedcolumnchartdatasetoptions.cpp
    wxstackedcolumnchartoptions.cpp
    wxtimeserieschart.cpp
    wxtimeserieschartctrl.cpp
    wxtimeserieschartoptions.cpp
        )

add_library(Charts SHARED ${LIB_SOURCES})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(Charts ${wxWidgets_LIBRARIES} ${WTLIBS} ${Boost_LIBRARIES} ${EXTRA_LIB_FLAGS} ${PROJECT_LIB_FLAGS})
install(TARGETS Charts DESTINATION ${EXE_DIR})


